--- a/Style.css
+++ b/Style.css
@@ -15,7 +15,24 @@ body{
     color:#30425A;
     box-shadow: 0px -7px 24px rgba(0, 0, 0, 0.25);
 }
+.nst{
+    background-color: white;
+    position: absolute;
+    width: 1779px;
+    height:55px;
+    left:275px;
+    padding-left:95px; 
+    padding-top:20px;
 
+
+    top: 0px;
+    background: #FFFFFF;
+    color:#30425A;
+    box-shadow: 0px -7px 24px rgba(0, 0, 0, 0.25);
+
+
+}
+/*
 .nst{
     background:white;
     margin-top:-50px;
@@ -38,6 +55,7 @@ body{
     
 
 }
+*/
 
 hr{margin-right:300px;}
 /*
@@ -124,8 +142,16 @@ section #home{
 
 table{ 
     border-collapse: collapse;
-    width:100%;
+    width:1000px;
+    margin: auto;
+    
    
+    
+    
+
+}
+.subtitle{
+    padding-left: 20px;
 }
  td{
      padding:20px 30px;
@@ -146,12 +172,14 @@ table{
       background: #F5F8FF;
       
   }
+  /*
   .para2{
-      margin-left:400px;
+      margin-left:390px;
       margin-right:50px;
      
       
   }
+  */
   .para2 p{
       padding-top: 20px;
   }
@@ -169,13 +197,17 @@ table{
             ;
         }
         
+        
         .newtable{
-            width:90%;
+            margin-top: 95px; 
+            width:1000px;
             background: white;
             padding-top:20px;
             position:relative;
             top:10;
-            margin: 0;
+            box-shadow:  0px 3px 10px -3px rgba(0, 0, 0, 0.25);
+        }
+            
           
             display: block;
          
@@ -183,8 +215,9 @@ table{
            
           
         }
+        
         table{
-            width:95%;
+            width:;
         }
         .center{
             text-align: center;
@@ -192,6 +225,7 @@ table{
         .pagination {
             display: inline-block;
             padding-top: 30px;
+            padding-bottom: 30px;
             
             
           }
