--- a/Style.css
+++ b/Style.css
@@ -12,8 +12,11 @@ body{
     padding-left:100px;
     text-align: left;
     margin-left: 270px;
-    color:#30425A;
+    color :#30425A;
     box-shadow: 0px -7px 24px rgba(0, 0, 0, 0.25);
+}
+.elephant{
+    color:#30425A;
 }
 .nst{
     background-color: white;
@@ -57,7 +60,10 @@ body{
 }
 */
 
-hr{margin-right:300px;}
+hr{margin-right:;
+
+width: 90%;
+        }
 /*
 ul{
     list-style: none;
